# Context-Aware-Research-Brief-Generator-Using-LangGraph-and-LangChain

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  EVALUATOR_INSTRUCTIONS.md  LICENSE  Makefile  README.md  START_FOR_EVALUATORS.bat  create_demo.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  test_fix.py
.github/workflows/: ci.yml
app/: __init__.py  api.py  cli.py  config.py  database.py  llm_tools.py  llm_tools_free.py  metrics.py  models.py  nodes.py  workflow.py
docs/: API_REFERENCE.md  DEPLOYMENT.md
tests/: conftest.py  test_api.py  test_models.py  test_nodes.py  test_workflow.py
